[package]
name = "TaskParentManager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] } 
serde = "1.0"
serde_json = "1.0"
envy = "0.4.2"
reqwest = { version = "0.11", features = ['json'] }
thiserror = "1.0"
dotenv = "0.15.0"
async-graphql = "2.9.18"